The start of a tedious process to make sure it all functions the same